Admin Template and User Interface | Admin Sidebar fix Urls

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/admin/js/app.js": "/admin/js/app.js",
     "/admin/css/app.css": "/admin/css/app.css",
     "/admin/css/main.css": "/admin/css/main.css",
+    "/public/js/public.js": "/public/js/public.js",
     "/admin/css/vuesax.css": "/admin/css/vuesax.css",
     "/admin/css/iconfont.css": "/admin/css/iconfont.css",
     "/admin/css/material-icons/material-icons.css": "/admin/css/material-icons/material-icons.css",
