--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -51,11 +51,13 @@ services:
         tty: true
         volumes: 
             - ./mysql/data:/var/lib/mysql
+            # - ./mysql/mysql.cnf:/etc/mysql/conf.d/custom.cnf
         ports: 
             - 3366:3306
         environment: 
             - MYSQL_DATABASE=laravel-deal
             - MYSQL_ROOT_PASSWORD=laravel
+        # command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci
         networks:
             - laravel-${PROJECT_NAME}
 
