--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "auth0-js": "^9.10.4",
         "axios": "^0.19.0",
         "axios-mock-adapter": "^1.17.0",
+        "bootstrap": "^4.0.0",
         "chart.js": "^2.8.0",
         "core-js": "2.6.5",
         "cross-env": "^7.0",
@@ -31,22 +32,24 @@
         "file-saver": "2.0.1",
         "firebase": "^6.0.4",
         "instantsearch.css": "^7.3.1",
+        "jquery": "^3.2",
         "jsonwebtoken": "^8.5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "material-icons": "^0.3.1",
         "node-sass": "^4.12.0",
         "perfect-scrollbar": "^1.4.0",
+        "popper.js": "^1.12",
         "postcss-rtl": "^1.5.0",
         "prismjs": "^1.16.0",
         "purgecss": "^1.3.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
         "script-loader": "0.7.2",
         "tailwindcss": "^1.0.1",
         "vee-validate": "^2.2.8",
-        "vue": "^2.6.10",
+        "vue": "^2.5.17",
         "vue-acl": "4.0.7",
         "vue-apexcharts": "^1.3.5",
         "vue-awesome-swiper": "^3.1.3",
