--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -5,6 +5,7 @@ RUN apt-get install -y zip
 RUN apt-get install -y unzip
 RUN apt-get install -y git
 RUN apt-get install -y curl
+RUN apt-get install -y vim
     
 # Install MySQLi
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
