--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "axios": "^0.19.0",
         "axios-mock-adapter": "^1.17.0",
         "bootstrap": "^4.0.0",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "chart.js": "^2.8.0",
         "core-js": "2.6.5",
         "cross-env": "^7.0",
