--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
         "vuesax": "^3.11.0",
         "vuex": "^3.1.1",
         "xlsx": "^0.15.0"
+    },
+    "dependencies": {
+        "vue-notification": "^1.3.20"
     }
 }
